--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ footer hr{
     }
 
     .hero-one-img img{
-        width: 505px;
+        width: 110.2%;
     }
 
     .hero-one::after{
@@ -387,7 +387,7 @@ footer hr{
         background-repeat: no-repeat;
         background-position: top left;
         position: absolute;
-        top: 48.8%;
+        top: 62.5%;
         right: 0;
         height: 100%;
         width: 100%;
@@ -412,7 +412,7 @@ footer hr{
     }
 
     .hero-two hr{
-       margin-left: 8em;
+       margin-left: 13em;
        width: 40%;
        font-weight: 700;
     }
@@ -458,4 +458,41 @@ footer hr{
     .footer-nav h4{
         margin-top: 2em;
     }
+}
+
+@media screen and (max-width: 375px) {
+    .hero-one-img img{
+        width: 112.6%;
+    }
+
+    .hero-one::after{
+        top: 42.5%;
+    }
+
+    .hero-one-text h1{
+        font-size: 2.8em;
+    }
+
+    .btn{
+        margin-left: 2em;
+    }
+
+    .hero-two hr{
+        margin-left: 6em;
+    }
+
+    .hero-two h1{
+        font-size: 2.8em;
+    }
+
+    .hero-two h3{
+        font-size: 1.8em;
+    }
+
+    .hero-three-text h2{
+        font-size: 1.8em;
+        width: 100%;
+    }
+
+    
 }
